# CodeMemory

./: .env.production  .gitignore  CHANGELOG.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.ai/: ai_context.md  architecture_map.json  dependency_graph.json  deployment_report.md  feature_status.json  health_score.json  leftover.md  project_summary.md  task_index.json
.ai/agent_memory/: architecture_decisions.md  decisions.json
.ai/context_packs/: authentication.json  deployment.json  testing.json
.github/workflows/: ci.yml
codememory/: __init__.py  cli.py  config.py  constants.py  models.py
codememory/embeddings/: __init__.py  encoder.py  indexer.py  searcher.py
codememory/graph/: __init__.py  builder.py  relationships.py  serializer.py
codememory/intelligence/: __init__.py  architecture.py  patterns.py  report_generator.py  summarizer.py
codememory/retrieval/: __init__.py  engine.py  query_parser.py  ranker.py
codememory/scanner/: __init__.py  file_walker.py  language_detector.py  models.py  tree_sitter_parser.py
codememory/server/: __init__.py  app.py  routes.py  tools.py
codememory/storage/: __init__.py  database.py  migrations.py  repository.py  schema.sql
codememory/watcher/: __init__.py  change_detector.py  file_watcher.py  incremental_scanner.py
docs/: adr.md  architecture.md  changelog.md  module_map.md
tests/: conftest.py  test_architecture_patterns.py  test_extractors.py  test_intelligence.py  test_retrieval.py  test_scanner.py  test_server.py  test_storage.py  test_watcher.py
(+8 files in other folders)
