[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codememory"
version = "0.1.0"
description = "Universal memory and context layer for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "networkx>=3.3",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1",
    "fastembed>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "fastapi-mcp>=0.3",
    "mcp[cli]>=1.0",
    "watchdog>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "gitignore-parser>=0.1",
    "pathspec>=0.12",
]

[project.scripts]
codememory = "codememory.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["codememory"]
